--- a/index.html.html
+++ b/index.html.html
@@ -14,15 +14,11 @@
 			font-size: 20px;
 		}
 		img{
+			margin: 40px 0px 0px 0px;
 			border-radius: 50%;
 		}
-		img.bg{
-			min-height: 100%;
-			min-width: 1024px;
-			width: 100%;
-			height: auto;
-
-		}
+		
+		
 		input{
 			border: 0;
 			padding: 10px;
@@ -38,7 +34,8 @@
 		<img src="pic1.jpg" width="200"height="200">
 		<h1>Akanksha Kapoor</h1>
 		<p>Hi! I am Akanksha a btech computer science engineering student.</p>>
-		<input type="email" placeholder="your email">
-		<input type="submit">
+		<input type="Email" placeholder="Your Email">
+		
+		<a href="contact.html"><input type="Submit"></a>
 	</body>
 </html>
